--- a/backend/tictatinfy/src/main/resources/application.properties
+++ b/backend/tictatinfy/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=your-keystore-password
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=your-alias
+
