--- a/backend/tictatinfy/src/main/resources/application.properties
+++ b/backend/tictatinfy/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=tictatinfy
-server.port=8090
+# server.port=8090
 
 # Use SQLite in-memory mode
 spring.datasource.url=jdbc:sqlite::memory:
@@ -17,4 +17,5 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=922100
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=your-alias
+server.port=8443
 
