--- a/backend/tictatinfy/src/main/resources/application.properties
+++ b/backend/tictatinfy/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=922100
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=your-alias
-server.port=8443
+server.port=80
 
